[package]
name = "secret-guessing"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.204"
serde_json = "1.0.135"
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys", tag = "testnet-v1.39.3" }
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk", tag = "testnet-v1.39.3" }
thiserror = "2.0.9"
tokio = "1.42.0"
toml = "0.8.19"
tracing = "0.1.41"
